in order to get Xstream to work with Java 17+ we needed to add --add-opens java.base/java.util=ALL-UNNAMED.  We should remove this once we move away from XStream