@@ -104,7 +104,7 @@ docker run ${DOCKER_USER_OPTION} -i --rm --name ${build_container_name} \
 -v ${m2_cache_parent_folder}/.m2:${HOME_DIR_WITHIN_CONTAINER}/.m2 \
 -v ${src_folder}:/repo \
 -v /etc/localtime:/etc/localtime:ro \
--e MAVEN_OPTS="-Xms256m -Xmx2048m" \
+-e MAVEN_OPTS="-Xms256m -Xmx2048m --add-opens java.base/java.util=ALL-UNNAMED" \
 -w /repo \
 maven:3-amazoncorretto-21 \
 bash -c "mvn clean ${MVN_GOAL} ${EXTRA_ARGS} -U \
